[project]
name = "TEM_comms"
version = "0.1.0"
authors = [
  { name="Cameron Devine", email="cameron.devine@alleninstitute.org" },
]
description = "The communication library for the next generation TEM system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'stomp-py',
  'pydantic',
]

[project.urls]
Homepage = "https://github.com/AllenInstitute/TEM_comms"
Issues = "https://github.com/AllenInstitute/TEM_comms/issues"